--- a/creditcardview/src/main/res/layout/view_credit_card.xml
+++ b/creditcardview/src/main/res/layout/view_credit_card.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:id="@+id/cardBackView"
@@ -9,8 +9,7 @@
         android:layout_height="@dimen/cardHeight"
         android:background="@drawable/credit_card_round_bg"
         android:orientation="vertical"
-        android:visibility="visible"
-        android:scaleX="0">
+        android:visibility="visible">
 
         <View
             android:id="@+id/magneticStrip"
