--- a/credit-card-view/src/main/res/values/cards.xml
+++ b/credit-card-view/src/main/res/values/cards.xml
@@ -2,65 +2,65 @@
 <resources>
 
     <style name="DefaultAmex">
-        <item name="frontBackground">@drawable/background_amex</item>
-        <item name="backBackground">@drawable/background_amex</item>
-        <item name="backLogo">@drawable/logo_amex</item>
-        <item name="frontLogo">@drawable/logo_amex</item>
+        <item name="cardFrontBackground">@drawable/background_amex</item>
+        <item name="cardBackBackground">@drawable/background_amex</item>
+        <item name="cardBackLogo">@drawable/logo_amex</item>
+        <item name="cardFrontLogo">@drawable/logo_amex</item>
     </style>
 
     <style name="DefaultDiners">
-        <item name="frontBackground">@drawable/background_diners</item>
-        <item name="backBackground">@drawable/background_diners</item>
-        <item name="backLogo">@drawable/logo_diners</item>
-        <item name="frontLogo">@drawable/logo_diners</item>
+        <item name="cardFrontBackground">@drawable/background_diners</item>
+        <item name="cardBackBackground">@drawable/background_diners</item>
+        <item name="cardBackLogo">@drawable/logo_diners</item>
+        <item name="cardFrontLogo">@drawable/logo_diners</item>
     </style>
 
     <style name="DefaultDiscover">
-        <item name="frontBackground">@drawable/background_discover</item>
-        <item name="backBackground">@drawable/background_discover</item>
-        <item name="backLogo">@drawable/logo_discover</item>
-        <item name="frontLogo">@drawable/logo_discover</item>
+        <item name="cardFrontBackground">@drawable/background_discover</item>
+        <item name="cardBackBackground">@drawable/background_discover</item>
+        <item name="cardBackLogo">@drawable/logo_discover</item>
+        <item name="cardFrontLogo">@drawable/logo_discover</item>
     </style>
 
     <style name="DefaultGeneric">
-        <item name="frontBackground">@drawable/background_generic</item>
-        <item name="backBackground">@drawable/background_generic</item>
-        <item name="backLogo">@drawable/logo_generic</item>
-        <item name="frontLogo">@drawable/logo_generic</item>
+        <item name="cardFrontBackground">@drawable/background_generic</item>
+        <item name="cardBackBackground">@drawable/background_generic</item>
+        <item name="cardBackLogo">@drawable/logo_generic</item>
+        <item name="cardFrontLogo">@drawable/logo_generic</item>
     </style>
 
     <style name="DefaultJcb">
-        <item name="frontBackground">@drawable/background_jcb</item>
-        <item name="backBackground">@drawable/background_jcb</item>
-        <item name="backLogo">@drawable/logo_jcb</item>
-        <item name="frontLogo">@drawable/logo_jcb</item>
+        <item name="cardFrontBackground">@drawable/background_jcb</item>
+        <item name="cardBackBackground">@drawable/background_jcb</item>
+        <item name="cardBackLogo">@drawable/logo_jcb</item>
+        <item name="cardFrontLogo">@drawable/logo_jcb</item>
     </style>
 
     <style name="DefaultMaestro">
-        <item name="frontBackground">@drawable/background_maestro</item>
-        <item name="backBackground">@drawable/background_maestro</item>
-        <item name="backLogo">@drawable/logo_maestro</item>
-        <item name="frontLogo">@drawable/logo_maestro</item>
+        <item name="cardFrontBackground">@drawable/background_maestro</item>
+        <item name="cardBackBackground">@drawable/background_maestro</item>
+        <item name="cardBackLogo">@drawable/logo_maestro</item>
+        <item name="cardFrontLogo">@drawable/logo_maestro</item>
     </style>
 
     <style name="DefaultMastercard">
-        <item name="frontBackground">@drawable/background_mastercard</item>
-        <item name="backBackground">@drawable/background_mastercard</item>
-        <item name="backLogo">@drawable/logo_mastercard</item>
-        <item name="frontLogo">@drawable/logo_mastercard</item>
+        <item name="cardFrontBackground">@drawable/background_mastercard</item>
+        <item name="cardBackBackground">@drawable/background_mastercard</item>
+        <item name="cardBackLogo">@drawable/logo_mastercard</item>
+        <item name="cardFrontLogo">@drawable/logo_mastercard</item>
     </style>
 
     <style name="DefaultUnionpay">
-        <item name="frontBackground">@drawable/background_unionpay</item>
-        <item name="backBackground">@drawable/background_unionpay</item>
-        <item name="backLogo">@drawable/logo_unionpay</item>
-        <item name="frontLogo">@drawable/logo_unionpay</item>
+        <item name="cardFrontBackground">@drawable/background_unionpay</item>
+        <item name="cardBackBackground">@drawable/background_unionpay</item>
+        <item name="cardBackLogo">@drawable/logo_unionpay</item>
+        <item name="cardFrontLogo">@drawable/logo_unionpay</item>
     </style>
 
     <style name="DefaultVisa">
-        <item name="frontBackground">@drawable/background_visa</item>
-        <item name="backBackground">@drawable/background_visa</item>
-        <item name="backLogo">@drawable/logo_visa</item>
-        <item name="frontLogo">@drawable/logo_visa</item>
+        <item name="cardFrontBackground">@drawable/background_visa</item>
+        <item name="cardBackBackground">@drawable/background_visa</item>
+        <item name="cardBackLogo">@drawable/logo_visa</item>
+        <item name="cardFrontLogo">@drawable/logo_visa</item>
     </style>
 </resources>
